@@ -140,6 +140,14 @@ single-inf-arg in qSupported
   the background, resulting in faster startup.  This can be controlled
   using "maint set dwarf synchronous".
 
+* GDB now accepts --no-escape-args as an alternative to --args on the
+  command line.  GDB will not escape special shell characters within
+  arguments after --no-escape-args.
+
+* gdbserver now accepts --no-escape-args as a command line flag.  When
+  this flag is used gdbserver will not escape special shell characters
+  within the inferior arguments.
+
 * Changed commands
 
 disassemble
